tests/diagnostics/declarations/constants/initializer_unknown_name/expect.txt
# exit: 1
input/main.lang0:1:11: error: unknown name 'MISSING'
  BROKEN := MISSING
            ^
